welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:11: error: not found: value n
                                           for (i <- 0 to 9) {b = b || arraytri(nums,n)}
                                                                                     ^